# glorious-mouse-battery-system-tray

./: README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mouse_battery.rs
