[package]
name = "model-d2-pro-battery"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "model_d2_pro_battery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "model-d2-pro-battery"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", features = ["png"] }
hidapi = "2.6"
imageproc = "0.25.0"
ab_glyph = "0.2.32"
log = "0.4.29"
env_logger = "0.11.8"

